--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -31,7 +30,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
