--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.5",
+    "source-code-pro": "^2.38.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
