--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
@@ -49,8 +49,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "vitest": "^2.1.8",
+    "jsdom": "^25.0.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitejs/plugin-react": "^4.3.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.20.3",
