completed week 1 of phase 3 implementation

--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
     "db:studio": "prisma studio",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "email:dev": "email dev --dir src/emails --port 3001"
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.22.0",
+    "@react-email/button": "^0.2.0",
+    "@react-email/components": "^0.4.0",
+    "@react-email/container": "^0.0.15",
+    "@react-email/head": "^0.0.12",
+    "@react-email/html": "^0.0.11",
+    "@react-email/preview": "^0.0.13",
+    "@react-email/section": "^0.0.16",
+    "@react-email/tailwind": "^1.2.2",
+    "@react-email/text": "^0.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucia": "^3.2.2",
@@ -32,6 +42,8 @@
     "prisma": "^5.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.2.7",
+    "resend": "^4.7.0",
     "shadcn-ui": "^0.9.5",
     "source-code-pro": "^2.38.0",
     "tailwind-merge": "^3.3.0",
@@ -40,22 +52,23 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/render": "^1.1.4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "vitest": "^2.1.8",
     "jsdom": "^25.0.1",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitejs/plugin-react": "^4.3.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.20.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.8"
   }
 }
