--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@react-email/section": "^0.0.16",
     "@react-email/tailwind": "^1.2.2",
     "@react-email/text": "^0.1.5",
+    "@stripe/stripe-js": "^7.8.0",
+    "@tanstack/react-query": "^5.84.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -45,10 +47,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.2.7",
+    "recharts": "^3.1.0",
     "resend": "^4.7.0",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.7",
     "source-code-pro": "^2.38.0",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.10"
